@@ -7,7 +7,7 @@
 #' See \code{?coop} for implementation details.
 #' 
 #' @param x
-#' A numeric matrix or vector.
+#' A numeric dataframe/matrix or vector.
 #' @param y
 #' A vector (when \code{x} is a vector) or missing (blank) when 
 #' \code{x} is a matrix.
@@ -49,6 +49,16 @@ pcor.matrix <- function(x, y, use="everything", inplace=FALSE, inverse=FALSE)
   co_matrix(x, y, CO_ORR, use, inplace, trans=FALSE, inverse=inverse)
 }
 
+#' @export
+pcor.data.frame <- function(x, y, use="everything", inplace=FALSE, inverse=FALSE)
+{
+  x_mat = as.matrix(x)
+  if (!missing(y) && is.data.frame(y))
+    y = as.matrix(y)
+  
+  pcor.matrix(x_mat, y, use=use, inplace=inplace, inverse=inverse)
+}
+
 
 
 #' @export
@@ -59,7 +69,7 @@ pcor.default <- function(x, y, use="everything", inplace=FALSE, inverse=FALSE)
 
 
 
-# tpcor
+### tpcor
 
 #' @rdname pcor
 #' @export
@@ -71,4 +81,14 @@ tpcor <- function(x, y, use="everything", inplace=FALSE, inverse=FALSE) UseMetho
 tpcor.matrix <- function(x, y, use="everything", inplace=FALSE, inverse=FALSE)
 {
   co_matrix(x, y, CO_ORR, use, inplace, trans=TRUE, inverse=inverse)
+}
+
+#' @export
+tpcor.data.frame <- function(x, y, use="everything", inplace=FALSE, inverse=FALSE)
+{
+  x_mat = as.matrix(x)
+  if (!missing(y) && is.data.frame(y))
+    y = as.matrix(y)
+  
+  tpcor.matrix(x_mat, y, use=use, inplace=inplace, inverse=inverse)
 }
