@@ -10,7 +10,7 @@ cosine(x, y, use = "everything", inverse = FALSE)
 tcosine(x, y, use = "everything", inverse = FALSE)
 }
 \arguments{
-\item{x}{A numeric matrix or vector.}
+\item{x}{A numeric dataframe/matrix or vector.}
 
 \item{y}{A vector (when \code{x} is a vector) or missing (blank) when 
 \code{x} is a matrix.}
